--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,15 +1,17 @@
 <div id="<%= dom_id location %>">
     <table>
-        <tr class = "one_item">
+        <tr class = "">
             <td><%= Location.human_enum_name(:loctype, location.loctype) %> <%= location.name %>, </td>
             <% if location.district.present? %>
-                <td><%= location.district %> <%= t('.district') %>, </dt>
+                <td><%= location.district %> <%= t('.district') %>, </td>
             <% end %>
             <% if location.region.present? %>
                 <td><%= location.region %> <%= t('.region') %>, </td>
             <% end %>
-            <td><%= location.country %></dt>
-            <td><%= link_to t('button.edit'), edit_location_path(location) %></td>            
+            <td><%= location.country %></td>
+            <% if user_signed_in? %>
+                <td><%= link_to t('button.edit'), edit_location_path(location) %></td>
+            <% end %>
         </tr>
     </table>
 </div>
