--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 </div>
 
-<div id="operations">
+<div id="locations">
     <% @locations.each do |location| %>
       <%= render location %>
     <% end %>
