--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,1 +1,3 @@
-<p>Copyright here</p>
+ <div class="position-absolute top-100 start-50 translate-middle w-100 p-3 bg-dark text-white">
+    <p>Copyright here</p>
+ </div>
