--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,16 +2,16 @@
     <div>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <%= link_to 'Locations', locations_path, class: "nav-link" %>
+                <%= link_to t('navigation.locations'), locations_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-                <%= link_to 'Teams', teams_path, class: "nav-link" %>
+                <%= link_to t('navigation.teams'), teams_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-                <%= link_to 'Tournament', tournaments_path, class: "nav-link" %>
+                <%= link_to t('navigation.tournaments'), tournaments_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-                <%= link_to 'Stadium', stadia_path, class: "nav-link" %>
+                <%= link_to t('navigation.stadia'), stadia_path, class: "nav-link" %>
             </li>
         </ul>
     </div>
