--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -2,7 +2,7 @@
 
 <div>
   <% if user_signed_in? %>
-    <%= link_to t('button.add.tournament'), new_tournament_path, :method => :post %>
+    <%= link_to t('button.add.tournament'), new_tournament_path, :method => :post, class: "btn btn-info" %>
   <% end %>
 </div>
 
