--- a/app/views/stadia/_stadium.html.erb
+++ b/app/views/stadia/_stadium.html.erb
@@ -6,7 +6,7 @@
                 <td>(<%= t('.street') %> <%= stadium.street %>)</td>
             <% end %>
             <% if user_signed_in? %>
-                <td><%= link_to t('button.edit'), edit_stadium_path(stadium), class: "btn btn-secondary" %></td>
+                <td><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_stadium_path(stadium), class: "btn btn-secondary" %></td>
             <% end %>
         </tr>
     </table>
