--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -3,7 +3,7 @@
         <tr class = "">
             <td>"<%= team.name %>" <%= team.represent %></td>
             <% if user_signed_in? %>
-                <td><%= link_to t('button.edit'), edit_team_path(team), class: "btn btn-secondary" %></td>
+                <td><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_team_path(team), class: "btn btn-secondary" %></td>
             <% end %>
         </tr>
     </table>
