--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,4 +1,9 @@
 <h4><%= t('.title') %></h4>
 
 <%= render "form", location: @location %>
-<%= button_to t('button.delete'), @location, method: :delete, data: { turbo_confirm: t('delete.confirm') }, class: "btn btn-danger" %>
+
+<div class="mt-2">
+    <%= button_to @location, method: :delete, data: { turbo_confirm: t('delete.confirm') }, class: "btn btn-danger" do %>
+        <i class="bi bi-trash"></i> <%= t('button.delete') %>
+    <% end %>
+</div>
