--- a/app/views/stadia/_form.html.erb
+++ b/app/views/stadia/_form.html.erb
@@ -12,19 +12,19 @@
     <% end %>
 
     <div class = "form">
-        <div>
+        <div class="mt-2">
           <%= form.label :name, t('.name'), style: "display: block" %>
           <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true %>
         </div>
 
-        <div>
+        <div class="mt-2">
           <%= form.label :street, t('.street'), style: "display: block" %>
           <%= form.text_field :street,  placeholder: t('.placeholder.street') %>
         </div>
 
-        <div>
+        <div class="mt-2">
           <%= form.button nil, class: "btn btn-success" do %>
-            <i class="bi bi-check-lg"></i><%= t('button.submit') %>
+            <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
           <% end %>
         </div>
 
