--- a/app/views/tournaments/_form.html.erb
+++ b/app/views/tournaments/_form.html.erb
@@ -12,24 +12,24 @@
     <% end %>
 
     <div class = "form">
-        <div>
+        <div class="mt-2">
           <%= form.label :name, t('.name'), style: "display: block" %>
           <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true %>
         </div>
 
-        <div>
+        <div class="mt-2">
           <%= form.label :subname, t('.subname'), style: "display: block" %>
           <%= form.text_field :subname,  placeholder: t('.placeholder.subname') %>
         </div>
 
-        <div>
+        <div class="mt-2">
           <%= form.label :group, t('.group'), style: "display: block" %>
           <%= form.text_field :group,  placeholder: t('.placeholder.group') %>
         </div>
 
-        <div>
+        <div class="mt-2">
           <%= form.button nil, class: "btn btn-success" do %>
-            <i class="bi bi-check-lg"></i><%= t('button.submit') %>
+            <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
           <% end %>
         </div>
 
