add style to tag main

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%= render 'shared/header' %>
     </header>
 
-    <main>
+    <main class="container">
       <%= render 'shared/flash_messages' %>
       <%= yield %>
     </main>
