--- a/app/views/stadia/_form.html.erb
+++ b/app/views/stadia/_form.html.erb
@@ -24,7 +24,7 @@
 
         <div class="mt-2">
             <%= form.label :location_id, t('.location'), style: "display: block" %>
-            <%= select(:stadium, :location_id, options_for_select(@locations), :include_blank => true) %>
+            <%= select(:stadium, :location_id, options_for_select(@locations, :selected => form.object.location_id), :include_blank => true) %>
         </div>
 
         <div class="mt-2">
