--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,2 +1,7 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<% if flash[:notice] %>
+    <p class="text-center fw-semibold fs-5 text-success"><%= notice %></p>
+<% end %>
+
+<% if flash[:alert] %>
+    <p class="text-center fw-semibold fs-5 text-danger"><%= alert %></p>
+<% end %>
