--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id team %>">
     <table>
-        <tr class = "">
-            <td>"<%= team.name %>" <%= team.represent %></td>
+        <tr class="">
+            <td>"<%= team.name %>" (<%= team.represent %>)</td>
             <% if user_signed_in? %>
                 <td><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_team_path(team), class: "btn btn-secondary" %></td>
             <% end %>
