--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,6 +13,9 @@
             <li class="nav-item">
                 <%= link_to t('navigation.stadia'), stadia_path, class: "nav-link" %>
             </li>
+            <li class="nav-item">
+                <%= link_to t('navigation.matches'), matches_path, class: "nav-link" %>
+            </li>
         </ul>
     </div>
 
