--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -19,8 +19,13 @@
         </div>
 
         <div class="mt-2">
+            <%= form.label :stage, t('.stage'), style: "display: block" %>
+            <%= form.text_field :stage,  placeholder: t('.placeholder.stage') %>
+        </div>
+
+        <div class="mt-2">
           <%= form.label :match_date, t('.matchdate'), style: "display: block" %>
-          <%= form.date_field :match_date, :value => Time.now.to_date %>
+          <%= form.date_field :match_date, :value => ( form.object.match_date || Time.now.to_date) %>
         </div>
 
         <div class="mt-2">
@@ -36,7 +41,7 @@
         <div class="mt-2">
           <%= form.label t('.score'), style: "display: block" %>
           <%= form.number_field :home_team_goal, min: 0, step: 1, :value => (form.object.home_team_goal || 0) %> : <%= form.number_field :visitor_team_goal, min: 0, step: 1, :value => (form.object.visitor_team_goal || 0)%>
-        </div>       
+        </div>
 
         <div class="mt-2">
           <%= form.button nil, class: "btn btn-success" do %>
