--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,10 @@
-<nav class="navbar navbar-dark bg-dark">
-    <div>
-        <ul class="nav justify-content-center">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+                <%= link_to t('navigation.posts'), posts_path, class: "nav-link" %>
+            </li>
             <li class="nav-item">
                 <%= link_to t('navigation.locations'), locations_path, class: "nav-link" %>
             </li>
@@ -18,10 +22,10 @@
             </li>
         </ul>
     </div>
-
-    <div>
+    
         <% if user_signed_in? %>
-            <%= button_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }%>
+            <%= button_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-primary" %>
         <% end %>
+    
     </div>
 </nav>
