--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,15 @@
 <h4><%= @post.title %></h4>
-            
+
+<h6><i class="bi bi-geo-alt"></i> <%= Location.human_enum_name(:loctype, @post.location.loctype) %> <%= @post.location.name %>,
+    <% if @post.location.district.present? %>
+        <%= @post.location.district %> <%= t('.district') %>, 
+    <% end %>
+    <% if @post.location.region.present? %>
+        <%= @post.location.region %> <%= t('.region') %>, 
+    <% end %>
+    <%= @post.location.country %>            
+</h6>
+
 <% if user_signed_in? %>
     <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_post_path(@post), class: "btn btn-secondary" %>
 <% end %>
