--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,5 +15,6 @@
  */
 
 /* Custom bootstrap variables must be set or imported *before* bootstrap.*/
+@import "actiontext.css";
 @import "bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
