--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,14 +12,19 @@
     <% end %>
 
     <div class = "form">
-        <div class="mt-2">
+        <div class="mb-3">
           <%= form.label :title, t('.title'), style: "display: block" %>
-          <%= form.text_field :title,  placeholder: t('.placeholder.title'), autofocus: true %>
+          <%= form.text_field :title,  placeholder: t('.placeholder.title'), autofocus: true, class: "form-control" %>
         </div>
 
-        <div class="mt-2">
-            <%= form.label :location_id, t('.location'), style: "display: block" %>
-            <%= select(:post, :location_id, options_for_select(@locations, :selected => form.object.location_id), :prompt => t('.prompt.location')) %>
+        <div class="mb-3">
+          <%= form.label :location_id, t('.location'), style: "display: block" %>
+          <%= select(:post, :location_id, options_for_select(@locations, :selected => form.object.location_id), :prompt => t('.prompt.location')) %>
+        </div>
+
+        <div class="field mb-3">
+          <%= form.label :content, t('.content'), style: "display: block" %>
+          <%= form.rich_text_area :content %>
         </div>
 
         <div class="mt-2">
