--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,8 @@
     <%= @post.location.country %>            
 </h6>
 
+<%= @post.content %>
+
 <% if user_signed_in? %>
-    <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_post_path(@post), class: "btn btn-secondary" %>
+    <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_post_path(@post), class: "btn btn-secondary my-3" %>
 <% end %>
