add styles to main

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <%= render 'shared/header' %>
     </header>
 
-    <main class="container">
+    <main class="mx-auto mb-5 pb-4 mt-2" style="width: 1000px;">
       <%= render 'shared/flash_messages' %>
       <%= yield %>
     </main>
