--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,7 @@
 <h4><%= @post.title %></h4>
 
+<h6><i class="bi bi-calendar3"></i> <%= @post.postdate %></h6>
+
 <h6><i class="bi bi-geo-alt"></i> <%= Location.human_enum_name(:loctype, @post.location.loctype) %> <%= @post.location.name %>,
     <% if @post.location.district.present? %>
         <%= @post.location.district %> <%= t('.district') %>, 
