--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,33 +1,38 @@
 <%= form_with(model: team) do |form| %>
-    <% if team.errors.any? %>
-        <div style="color: red">
-        <h2><%= t 'forms.messages.errors', count: team.errors.count %></h2>
+  <% if team.errors.any? %>
+    <div style="color: red">
+      <h2><%= t 'forms.messages.errors', count: team.errors.count %></h2>
+      <ul>
+        <% team.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+      </div>
+  <% end %>
 
-        <ul>
-            <% team.errors.each do |error| %>
-            <li><%= error.full_message %></li>
-            <% end %>
-        </ul>
-        </div>
-    <% end %>
+  <div class = "form">
 
-    <div class = "form">
-        <div  class="mt-2">
-          <%= form.label :name, t('.name'), style: "display: block" %>
-          <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true %>
-        </div>
-
-        <div class="mt-2">
-          <%= form.label :represent, t('.represent'), style: "display: block" %>
-          <%= form.text_field :represent,  placeholder: t('.placeholder.represent') %>
-        </div>
-
-        <div class="mt-2">
-          <%= form.button nil, class: "btn btn-success" do %>
-            <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
-          <% end %>
-        </div>
-
+    <div  class="mt-2">
+      <%= form.label :teamtype, t('.teamtype'), style: "display: block" %>
+      <%= form.text_field :teamtype,  placeholder: t('.placeholder.teamtype'), class: "form-control"%>
     </div>
+
+    <div  class="mt-2">
+      <%= form.label :name, t('.name'), style: "display: block" %>
+      <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true, class: "form-control" %>
+    </div>
+
+    <div class="mt-2">
+      <%= form.label :represent, t('.represent'), style: "display: block" %>
+      <%= form.text_field :represent,  placeholder: t('.placeholder.represent'), class: "form-control" %>
+    </div>
+
+    <div class="mt-2">
+      <%= form.button nil, class: "btn btn-success" do %>
+        <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
+      <% end %>
+    </div>
+
+  </div>
 
 <% end %>
