--- a/app/views/stadia/_form.html.erb
+++ b/app/views/stadia/_form.html.erb
@@ -11,23 +11,23 @@
         </div>
     <% end %>
 
-    <div class = "form">
-        <div class="mt-2">
+    <div class="row g-3">
+        <div class="col-md-6">
           <%= form.label :name, t('.name'), style: "display: block" %>
-          <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true %>
+          <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true, class: "form-control" %>
         </div>
 
-        <div class="mt-2">
+        <div class="col-md-6">
           <%= form.label :street, t('.street'), style: "display: block" %>
-          <%= form.text_field :street,  placeholder: t('.placeholder.street') %>
+          <%= form.text_field :street,  placeholder: t('.placeholder.street'), class: "form-control" %>
         </div>
 
-        <div class="mt-2">
+        <div class="col-md-6">
             <%= form.label :location_id, t('.location'), style: "display: block" %>
-            <%= select(:stadium, :location_id, options_for_select(@locations, :selected => form.object.location_id), :prompt => t('.prompt')) %>
+            <%= select(:stadium, :location_id, options_for_select(@locations, :selected => form.object.location_id), {:prompt => t('.prompt')}, {:class => "form-select"} ) %>
         </div>
 
-        <div class="mt-2">
+        <div class="col-12">
           <%= form.button nil, class: "btn btn-success" do %>
             <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
           <% end %>
