--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -10,24 +10,23 @@
       </div>
   <% end %>
 
-  <div class = "form">
-
-    <div  class="mt-2">
+  <div class="row g-3">
+    <div  class="col-md-2">
       <%= form.label :teamtype, t('.teamtype'), style: "display: block" %>
       <%= form.text_field :teamtype,  placeholder: t('.placeholder.teamtype'), class: "form-control"%>
     </div>
 
-    <div  class="mt-2">
+    <div  class="col-md-6">
       <%= form.label :name, t('.name'), style: "display: block" %>
       <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true, class: "form-control" %>
     </div>
 
-    <div class="mt-2">
+    <div class="col-md-8">
       <%= form.label :represent, t('.represent'), style: "display: block" %>
       <%= form.text_field :represent,  placeholder: t('.placeholder.represent'), class: "form-control" %>
     </div>
 
-    <div class="mt-2">
+    <div class="col-12">
       <%= form.button nil, class: "btn btn-success" do %>
         <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
       <% end %>
