--- a/app/views/tournaments/_form.html.erb
+++ b/app/views/tournaments/_form.html.erb
@@ -11,23 +11,23 @@
         </div>
     <% end %>
 
-    <div class = "form">
-        <div class="mt-2">
+    <div class="row g-3">
+        <div class="col-md-10">
           <%= form.label :name, t('.name'), style: "display: block" %>
-          <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true %>
+          <%= form.text_field :name,  placeholder: t('.placeholder.name'), autofocus: true, class: "form-control" %>
         </div>
 
-        <div class="mt-2">
+        <div class="col-md-5">
           <%= form.label :subname, t('.subname'), style: "display: block" %>
-          <%= form.text_field :subname,  placeholder: t('.placeholder.subname') %>
+          <%= form.text_field :subname,  placeholder: t('.placeholder.subname'), class: "form-control" %>
         </div>
 
-        <div class="mt-2">
+        <div class="col-md-5">
           <%= form.label :group, t('.group'), style: "display: block" %>
-          <%= form.text_field :group,  placeholder: t('.placeholder.group') %>
+          <%= form.text_field :group,  placeholder: t('.placeholder.group'), class: "form-control" %>
         </div>
 
-        <div class="mt-2">
+        <div class="col-12">
           <%= form.button nil, class: "btn btn-success" do %>
             <i class="bi bi-check-lg"></i> <%= t('button.submit') %>
           <% end %>
