--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,12 +1,15 @@
-<h4><%= t('.title') %></h4>
-
-<div>
-  <% if user_signed_in? %>
-    <%= link_to t('button.add.match'), new_match_path, :method => :post, class: "btn btn-info" %>
-  <% end %>
+<div class="container text-start">
+  <div class="row justify-content-end">
+    <div class="col"><h4><%= t('.title') %></h4></div>
+    <div class="col text-end">
+        <% if user_signed_in? %>
+          <%= link_to t('button.add.match'), new_match_path, :method => :post, class: "btn btn-info" %>
+        <% end %>
+    </div>
+  </div>
 </div>
 
-<div id="stadia">
+<div id="matches">
     <% @matches.each do |match| %>
       <%= render match %>
     <% end %>
