--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,26 @@
-<h4><%= @post.title %></h4>
-
-<h6><i class="bi bi-calendar3"></i> <%= @post.postdate %></h6>
-
-<h6><i class="bi bi-geo-alt"></i> <%= Location.human_enum_name(:loctype, @post.location.loctype) %> <%= @post.location.name %>,
-    <% if @post.location.district.present? %>
-        <%= @post.location.district %> <%= t('.district') %>, 
-    <% end %>
-    <% if @post.location.region.present? %>
-        <%= @post.location.region %> <%= t('.region') %>, 
-    <% end %>
-    <%= @post.location.country %>            
-</h6>
+<div class="container text-start">
+  <div class="row justify-content-end">
+    <div class="col"><h4><%= @post.title %></h4></div>
+    <div class="col text-end">
+        <% if user_signed_in? %>
+          <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_post_path(@post), class: "btn btn-secondary" %>
+        <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-2"><h6><i class="bi bi-calendar3"></i> <%= @post.postdate %></h6></div>
+    <div class="col">
+        <h6><i class="bi bi-geo-alt"></i> <%= Location.human_enum_name(:loctype, @post.location.loctype) %> <%= @post.location.name %>,
+            <% if @post.location.district.present? %>
+                <%= @post.location.district %> <%= t('.district') %>,
+            <% end %>
+            <% if @post.location.region.present? %>
+                <%= @post.location.region %> <%= t('.region') %>,
+            <% end %>
+            <%= @post.location.country %>
+        </h6>
+    </div>
+  </div>
+</div>
 
 <%= @post.content %>
-
-<% if user_signed_in? %>
-    <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_post_path(@post), class: "btn btn-secondary my-3" %>
-<% end %>
