--- a/app/views/matches/_match.html.erb
+++ b/app/views/matches/_match.html.erb
@@ -21,7 +21,7 @@
                 <% end %>
             </td>
             <% if user_signed_in? %>
-                <td rowspan="4"><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_match_path(match), class: "btn btn-secondary ms-1" %></td>
+                <td rowspan="4"><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_match_path(match), class: "btn btn-secondary btn-sm ms-1" %></td>
             <% end %>
         </tr>
         <tr>
