--- a/app/views/stadia/_stadium.html.erb
+++ b/app/views/stadia/_stadium.html.erb
@@ -14,7 +14,7 @@
             <% end %>
             <td>, <%= stadium.location.country %></td>
             <% if user_signed_in? %>
-                <td><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_stadium_path(stadium), class: "btn btn-secondary" %></td>
+                <td><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_stadium_path(stadium), class: "btn btn-secondary btn-sm ms-1" %></td>
             <% end %>
         </tr>
     </table>
