--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,31 +1,49 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item">
-                <%= link_to t('navigation.posts'), posts_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-                <%= link_to t('navigation.locations'), locations_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-                <%= link_to t('navigation.teams'), teams_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-                <%= link_to t('navigation.tournaments'), tournaments_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-                <%= link_to t('navigation.stadia'), stadia_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-                <%= link_to t('navigation.matches'), matches_path, class: "nav-link" %>
-            </li>
-        </ul>
-    </div>
-    
-        <% if user_signed_in? %>
-            <%= button_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-primary" %>
+        <%= link_to root_path, class: "navbar-brand" do %>
+            <%= image_tag 'fzv-32.png' %> <%= t('appname') %>
         <% end %>
-    
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <%= link_to t('navigation.posts'), posts_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to t('navigation.locations'), locations_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <%= t('navigation.football') %>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="nav-item">
+                            <%= link_to t('navigation.teams'), teams_path, class: "dropdown-item" %>
+                        </li>
+                        <li class="nav-item">
+                            <%= link_to t('navigation.tournaments'), tournaments_path, class: "dropdown-item" %>
+                        </li>
+                        <li class="nav-item">
+                            <%= link_to t('navigation.stadia'), stadia_path, class: "dropdown-item" %>
+                        </li>
+                        <li class="nav-item">
+                            <%= link_to t('navigation.matches'), matches_path, class: "dropdown-item" %>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
+            <% if user_signed_in? %>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <%= button_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-primary" %>
+                    </li>
+                </ul>
+            <% end %>
+
+        </div>
+
     </div>
 </nav>
