--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -9,6 +9,7 @@
                 <td>, <%= location.region %> <%= t('.region') %></td>
             <% end %>
             <td>, <%= location.country %></td>
+            <td><%= link_to '<i class="bi bi-file-text"></i>'.html_safe, locations_searchposts_path(id: location.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %></td>
             <% if user_signed_in? %>
                 <td><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_location_path(location), class: "btn btn-secondary btn-sm ms-1" %></td>
             <% end %>
