--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,10 +1,15 @@
-<div id="<%= dom_id post %>">
-    <table>
-        <tr>
-            <td><h5><%= post.postdate %> | <%= post.title %></h5></td>
-        </tr>
-        <tr>
-            <td><%= post.content.to_plain_text.truncate(256) %> <%= link_to '<i class="bi bi-plus-lg"></i>'.html_safe, post, class: "btn btn-secondary btn-sm ms-1" %></td>
-        </tr>
-    </table>
+<div class="col-sm-4">
+    <div id="<%= dom_id post %>">
+    <%= link_to post, class: "text-decoration-none" do %>
+        <div class="card text-bg-light mt-2 mb-3">
+            <div class="card-body">
+                <h5 class="card-title"><%= post.title %></h5>
+                <p class="card-text">
+                    <h6><i class="bi bi-calendar3"></i> <%= post.postdate %></h6>
+                    <%= post.content.to_plain_text.truncate(256) %> 
+                </p>
+            </div>
+        </div>
+    <% end %>    
+    </div>
 </div>
